welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: not found: value A
if(litMessage()==A){avance} 
                 ^